fixed a width issue and spacing on contacts

--- a/_Global/css/main.css
+++ b/_Global/css/main.css
@@ -35,7 +35,7 @@ html, body { background-color: rgb(0,0,0); font-family: "Helvetica Neue", Helvet
 
 .header div { display:inline-block; }
 .header > div {height:100%;}
-.header > div.header-stripe { height:10px; display:block; width:100%; background-color:rgb(0,0,0); }
+.header > div.header-stripe { height:10px; display:block; background-color:rgb(0,0,0); }
 
 .title-container {margin:32px 0 0 7%;}
 .title-container .nav { margin-left:-5px; }
@@ -68,10 +68,10 @@ section.text {padding-bottom: 10%;}
 }
 
 .story .gif-copy-container {height:315px;}
-.story .gif { display:none; height:100%; }
+.story .gif { display:none; height:75%; }
 .gif.glasses { background:url('/_Global/images/gifs/glasses.gif') no-repeat center }
 .gif.poop { background:url('/_Global/images/gifs/poop.gif') no-repeat center; padding-top:90px; }
-.gif.talk { background:url('/_Global/images/gifs/talk.gif') no-repeat center }
+.gif.talk { background:url('/_Global/images/gifs/talk.gif') no-repeat center; }
 
 .story .copy span { color: rgb(255, 255, 255); font-style: italic; }
 .story .copy {
@@ -83,16 +83,17 @@ section.text {padding-bottom: 10%;}
     text-align: center;
 }
 
-section.text .copy, section.contact .copy { padding-top:100px; }
+section.text .copy { padding-top:100px; }
 
 section .bar-wrapper {width:100%;height:520px; background-color: rgba(247, 247, 247, 0.8); }
-section.bar .story {position:absolute;width:100%;padding-top:200px;}
+section.bar .story {position:absolute;padding-top:200px;left:0;right:0;}
 section.bar .story .copy span { color: rgb(62, 62, 62); line-height: 1.542;border-bottom: 1px solid rgba(0, 0, 0, 0.2);}
 section.bar .story .copy span.highlight { color: rgb(255, 255, 255);font-style: normal; border:none; }
 
-section.contact .gif-copy-container {padding-top: 0;}
-section.contact {padding-bottom:100px;}
-
+section.contact {padding-bottom:75px;}
+section.contact .gif-copy-container {padding-top: 100px; height: 300px;}
+section.contact .story h1 {margin:0 0 0 50px;}
+section.contact .copy { padding-top:50px; }
 
 
 /* footer styles */
@@ -118,9 +119,9 @@ section.parallax > div {
 #dodge{ background:url('/_Global/images/bg/DODGE.png') 50% 0 no-repeat fixed; }
 #ride-planner{ background: url('/_Global/images/bg/RIDE PLANNER.png') 50% 0 no-repeat fixed; }
 
-.contact-wrapper {margin-top: 105px;}
-.contact-wrapper > div { height:250px; width:15%; display:inline-block; }
-.contact-wrapper a {display:block;height:100%;width:100%;}
+.contact-wrapper {height:200px;}
+.contact-wrapper > div { height:100%; width:15%; display:inline-block; }
+.contact-wrapper a {display:block;height:100%;}
 .contact-wrapper .twitter {background: url('/_Global/images/icons/twitter-resting.png') no-repeat center;}
 .contact-wrapper .twitter:hover {background: url('/_Global/images/icons/twitter-hover.png') no-repeat center;}
 .contact-wrapper .linkedin {background: url('/_Global/images/icons/linkedin-resting.png') no-repeat center;}
